oops, removed too many links.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1047,6 +1047,10 @@ TODO:
 
 % \bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
 %     function}, Mathematica Absurdica, 117 (1965) 338--9.
+\bibitem{issue_merge_cargo} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/61
+\bibitem{issue_cli_interface} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/86
+\bibitem{issue_compiling_fails} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/317
+\bibitem{issue_libp2p} TODO \\ https://github.com/libp2p/rust-libp2p/pull/3312
 
 \bibitem{responsibilities_tomasz} GitHub (2023) \\
 	https://github.com/search?o=desc\&q=org\%3Aobi1kenobi+author\%3Atonowak\&s=updated\&type=Issues
