--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1047,97 +1047,114 @@ TODO:
 
 % \bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
 %     function}, Mathematica Absurdica, 117 (1965) 338--9.
-\bibitem{issue_merge_cargo} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/61
-\bibitem{issue_cli_interface} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/86
-\bibitem{issue_compiling_fails} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/317
-\bibitem{issue_libp2p} TODO \\ https://github.com/libp2p/rust-libp2p/pull/3312
 
-\bibitem{responsibilities_tomasz} GitHub (2023) \\
-	https://github.com/search?o=desc\&q=org\%3Aobi1kenobi+author\%3Atonowak\&s=updated\&type=Issues
+\bibitem{issue_merge_cargo} GitHub,
+	\textit{cargo-semver-checks -- Issue \#61} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/61}
 
-\bibitem{responsibilities_michal} GitHub (2023) \\
-	https://github.com/search?o=desc\&q=org\%3Aobi1kenobi+author\%3Astaniewzki\&s=updated\&type=Issues
+\bibitem{issue_cli_interface} GitHub,
+	\textit{cargo-semver-checks -- Issue \#86} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/86}
 
-\bibitem{responsibilities_mieszko} GitHub (2023) \\
-	https://github.com/search?o=desc\&q=org\%3Aobi1kenobi+author\%3Amgr0dzicki\&s=updated\&type=Issues
+\bibitem{issue_compiling_fails} GitHub,
+	\textit{cargo-semver-checks -- Issue \#317} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/317}
 
-\bibitem{responsibilities_mieszko_action_tests} GitHub (2023) \\
-	https://github.com/mgr0dzicki/cargo-semver-action-ref-slice
+\bibitem{issue_libp2p} GitHub,
+	\textit{rust-libp2p -- Pull Request \#3312} (2023) \\
+	\url{https://github.com/libp2p/rust-libp2p/pull/3312}
 
-\bibitem{responsibilities_bartosz} GitHub (2023) \\
-	https://github.com/search?o=desc\&q=org\%3Aobi1kenobi+author\%3ASmolSir\&s=updated\&type=Issues
+\bibitem{responsibilities_tomasz} GitHub,
+	\textit{Contributions authored by Tomasz} (2023) \\
+	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Atonowak&s=updated&type=Issues}
+
+\bibitem{responsibilities_michal} GitHub,
+	\textit{Contributions authored by Michał} (2023) \\
+	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Astaniewzki&s=updated&type=Issues}
+
+\bibitem{responsibilities_mieszko} GitHub,
+	\textit{Contributions authored by Mieszko} (2023) \\
+	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Amgr0dzicki&s=updated&type=Issues}
+
+\bibitem{responsibilities_mieszko_action_tests} GitHub,
+	\textit{mgr0dzicki/cargo-semver-action-ref-slice} (2023) \\
+	\url{https://github.com/mgr0dzicki/cargo-semver-action-ref-slice}
+
+\bibitem{responsibilities_bartosz} GitHub,
+	\textit{Contributions authored by Bartosz} (2023) \\
+	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3ASmolSir&s=updated&type=Issues}
 
 \bibitem{Rust-1} Rust Team,
 	\textit{Rust Programming Language} (2023) \\
-	https://www.rust-lang.org/
+	\url{https://www.rust-lang.org/}
 
 \bibitem{Rust-2} Wikipedia,
 	\textit{Rust (programming language)} (2023) \\
-	https://en.wikipedia.org/wiki/Rust\_(programming\_language)/
+	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
 
 \bibitem{survey} Stack Overflow,
 	\textit{Annual Developer Survey} (2022) \\
-	https://insights.stackoverflow.com/survey/
+	\url{https://insights.stackoverflow.com/survey/}
 
 \bibitem{Rust-for-Linux} Wikipedia,
 	\textit{Rust for Linux} (2023) \\
-	https://en.wikipedia.org/wiki/Rust\_for\_Linux/
+	\url{https://en.wikipedia.org/wiki/Rust_for_Linux/}
 
 \bibitem{Cargo} Rust Team,
 	\textit{The Cargo Book} (2023) \\
-	https://doc.rust-lang.org/cargo/index.html/
+	\url{https://doc.rust-lang.org/cargo/index.html/}
 
 \bibitem{Cargo-vs-pip} William Manley,
 	\textit{Pip and Cargo are not the same} (2022) \\
-	https://doc.rust-lang.org/cargo/index.html/
+	\url{https://doc.rust-lang.org/cargo/index.html/}
 
 \bibitem{Abstract-Syntax-Tree} Wikipedia,
 	\textit{Abstract syntax tree} (2023) \\
-	https://en.wikipedia.org/wiki/Abstract\_syntax\_tree/
+	\url{https://en.wikipedia.org/wiki/Abstract_syntax_tree/}
 
 \bibitem{Semantic-Versioning} semver.org,
 	\textit{Semantic Versioning 2.0.0} (2022) \\
-	https://semver.org/
+	\url{https://semver.org/}
 
 \bibitem{paper} Hao Li, Filpe R Cogo, Cor-Paul Bezemer, \\
-    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry}
-    (2022) \\ https://arxiv.org/pdf/2201.11821.pdf
+    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (2022) \\
+	\url{https://arxiv.org/pdf/2201.11821.pdf}
 
 \bibitem{fearless-cargo-update} Predrag Gruevski,
     \textit{Towards fearless cargo update} (2022) \\
-    https://predr.ag/blog/toward-fearless-cargo-update/
+    \url{https://predr.ag/blog/toward-fearless-cargo-update/}
 
 \bibitem{elm-lang} Evan Czaplicki,
     \textit{Elm Programming Language} (2021) \\
-    https://elm-lang.org/
+    \url{https://elm-lang.org/}
 
-\bibitem{pyo3-issue}
-    \textit{Github PyO3 issue \#285} (2018) \\
-    https://github.com/PyO3/pyo3/issues/285
+\bibitem{pyo3-issue} GitHub,
+    \textit{PyO3 -- Issue \#285} (2018) \\
+    \url{https://github.com/PyO3/pyo3/issues/285}
 
-\bibitem{clap-issue}
-    \textit{Github clap issue \#3876} (2022) \\
-    https://github.com/clap-rs/clap/issues/3876
+\bibitem{clap-issue} GitHub,
+    \textit{clap -- Issue \#3876} (2022) \\
+    \url{https://github.com/clap-rs/clap/issues/3876}
 
-\bibitem{block-buffer-issue}
-    \textit{Github RustCrypto issue \#22} \\
-    https://github.com/RustCrypto/utils/issues/22
+\bibitem{block-buffer-issue} GitHub,
+    \textit{RustCrypto -- Issue \#22} (2023) \\
+    \url{https://github.com/RustCrypto/utils/issues/22}
 
 \bibitem{python-pip} Wikipedia,
-	\textit{Python pip} \\
-	https://en.wikipedia.org/wiki/Pip\_(package\_manager)
+	\textit{Python pip} (2023) \\
+	\url{https://en.wikipedia.org/wiki/Pip_(package_manager)}
 
-\bibitem{rustdoc-theory}
-	\textit{The rustdoc book} \\
-	https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html
+\bibitem{rustdoc-theory} Rust Team,
+	\textit{The rustdoc book} (2023) \\
+	\url{https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html}
 
-\bibitem{trustfall}
-	\textit{Trustfall -- Query (Almost) Everything} \\
-	https://github.com/obi1kenobi/trustfall
+\bibitem{trustfall} GitHub,
+	\textit{Trustfall -- Query (Almost) Everything} (2023) \\
+	\url{https://github.com/obi1kenobi/trustfall}
 
-\bibitem{cargo-semver-checks}
-	\textit{cargo-semver-checks repository} \\
-	https://github.com/obi1kenobi/cargo-semver-checks
+\bibitem{cargo-semver-checks} GitHub,
+	\textit{cargo-semver-checks} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks}
 
 \end{thebibliography}
 
