comment out not cited bibitems

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1084,45 +1084,45 @@ TODO:
 	\textit{Contributions authored by Bartosz} (2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3ASmolSir&s=updated&type=Issues}
 
-\bibitem{Rust-1} Rust Team,
-	\textit{Rust Programming Language} (2023) \\
-	\url{https://www.rust-lang.org/}
+% \bibitem{Rust-1} Rust Team,
+% 	\textit{Rust Programming Language} (2023) \\
+% 	\url{https://www.rust-lang.org/}
 
-\bibitem{Rust-2} Wikipedia,
-	\textit{Rust (programming language)} (2023) \\
-	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
+% \bibitem{Rust-2} Wikipedia,
+% 	\textit{Rust (programming language)} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
 
 \bibitem{survey} Stack Overflow,
 	\textit{Annual Developer Survey} (2022) \\
 	\url{https://insights.stackoverflow.com/survey/}
 
-\bibitem{Rust-for-Linux} Wikipedia,
-	\textit{Rust for Linux} (2023) \\
-	\url{https://en.wikipedia.org/wiki/Rust_for_Linux/}
+% \bibitem{Rust-for-Linux} Wikipedia,
+% 	\textit{Rust for Linux} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Rust_for_Linux/}
 
-\bibitem{Cargo} Rust Team,
-	\textit{The Cargo Book} (2023) \\
-	\url{https://doc.rust-lang.org/cargo/index.html/}
+% \bibitem{Cargo} Rust Team,
+% 	\textit{The Cargo Book} (2023) \\
+% 	\url{https://doc.rust-lang.org/cargo/index.html/}
 
-\bibitem{Cargo-vs-pip} William Manley,
-	\textit{Pip and Cargo are not the same} (2022) \\
-	\url{https://doc.rust-lang.org/cargo/index.html/}
+% \bibitem{Cargo-vs-pip} William Manley,
+% 	\textit{Pip and Cargo are not the same} (2022) \\
+% 	\url{https://doc.rust-lang.org/cargo/index.html/}
 
-\bibitem{Abstract-Syntax-Tree} Wikipedia,
-	\textit{Abstract syntax tree} (2023) \\
-	\url{https://en.wikipedia.org/wiki/Abstract_syntax_tree/}
+% \bibitem{Abstract-Syntax-Tree} Wikipedia,
+% 	\textit{Abstract syntax tree} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Abstract_syntax_tree/}
 
-\bibitem{Semantic-Versioning} semver.org,
-	\textit{Semantic Versioning 2.0.0} (2022) \\
-	\url{https://semver.org/}
+% \bibitem{Semantic-Versioning} semver.org,
+% 	\textit{Semantic Versioning 2.0.0} (2022) \\
+% 	\url{https://semver.org/}
 
 \bibitem{paper} Hao Li, Filpe R Cogo, Cor-Paul Bezemer, \\
     \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (2022) \\
 	\url{https://arxiv.org/pdf/2201.11821.pdf}
 
-\bibitem{fearless-cargo-update} Predrag Gruevski,
-    \textit{Towards fearless cargo update} (2022) \\
-    \url{https://predr.ag/blog/toward-fearless-cargo-update/}
+% \bibitem{fearless-cargo-update} Predrag Gruevski,
+%     \textit{Towards fearless cargo update} (2022) \\
+%     \url{https://predr.ag/blog/toward-fearless-cargo-update/}
 
 \bibitem{elm-lang} Evan Czaplicki,
     \textit{Elm Programming Language} (2021) \\
@@ -1140,21 +1140,21 @@ TODO:
     \textit{RustCrypto -- Issue \#22} (2023) \\
     \url{https://github.com/RustCrypto/utils/issues/22}
 
-\bibitem{python-pip} Wikipedia,
-	\textit{Python pip} (2023) \\
-	\url{https://en.wikipedia.org/wiki/Pip_(package_manager)}
+% \bibitem{python-pip} Wikipedia,
+% 	\textit{Python pip} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Pip_(package_manager)}
 
-\bibitem{rustdoc-theory} Rust Team,
-	\textit{The rustdoc book} (2023) \\
-	\url{https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html}
+% \bibitem{rustdoc-theory} Rust Team,
+% 	\textit{The rustdoc book} (2023) \\
+% 	\url{https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html}
 
-\bibitem{trustfall} GitHub,
-	\textit{Trustfall -- Query (Almost) Everything} (2023) \\
-	\url{https://github.com/obi1kenobi/trustfall}
+% \bibitem{trustfall} GitHub,
+% 	\textit{Trustfall -- Query (Almost) Everything} (2023) \\
+% 	\url{https://github.com/obi1kenobi/trustfall}
 
-\bibitem{cargo-semver-checks} GitHub,
-	\textit{cargo-semver-checks} (2023) \\
-	\url{https://github.com/obi1kenobi/cargo-semver-checks}
+% \bibitem{cargo-semver-checks} GitHub,
+% 	\textit{cargo-semver-checks} (2023) \\
+% 	\url{https://github.com/obi1kenobi/cargo-semver-checks}
 
 \end{thebibliography}
 
