--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1045,8 +1045,105 @@ TODO:
 \begin{thebibliography}{99}\label{r:chapter_bibliography}
 \addcontentsline{toc}{chapter}{Bibliography}
 
+%%% template
+
 % \bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
 %     function}, Mathematica Absurdica, 117 (1965) 338--9.
+
+
+%%% section 1.1 links
+
+% \bibitem{Rust-1} Rust Team,
+% 	\textit{Rust Programming Language} (2023) \\
+% 	\url{https://www.rust-lang.org/}
+
+% \bibitem{Rust-2} Wikipedia,
+% 	\textit{Rust (programming language)} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
+
+\bibitem{survey} Stack Overflow,
+	\textit{Annual Developer Survey} (2022) \\
+	\url{https://insights.stackoverflow.com/survey/}
+
+% \bibitem{Rust-for-Linux} Wikipedia,
+% 	\textit{Rust for Linux} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Rust_for_Linux/}
+
+
+%%% section 1.2 links
+
+% \bibitem{Cargo} Rust Team,
+% 	\textit{The Cargo Book} (2023) \\
+% 	\url{https://doc.rust-lang.org/cargo/index.html/}
+
+% \bibitem{python-pip} Wikipedia,
+% 	\textit{Python pip} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Pip_(package_manager)}
+
+% \bibitem{Cargo-vs-pip} William Manley,
+% 	\textit{Pip and Cargo are not the same} (2022) \\
+% 	\url{https://doc.rust-lang.org/cargo/index.html/}
+
+
+%%% section 1.3 links
+
+% \bibitem{Semantic-Versioning} semver.org,
+% 	\textit{Semantic Versioning 2.0.0} (2022) \\
+% 	\url{https://semver.org/}
+
+% \bibitem{fearless-cargo-update} Predrag Gruevski,
+%     \textit{Towards fearless cargo update} (2022) \\
+%     \url{https://predr.ag/blog/toward-fearless-cargo-update/}
+
+
+%%% section 1.4 links
+
+% \bibitem{Abstract-Syntax-Tree} Wikipedia,
+% 	\textit{Abstract syntax tree} (2023) \\
+% 	\url{https://en.wikipedia.org/wiki/Abstract_syntax_tree/}
+
+
+%%% section 2.1 links
+
+\bibitem{issue_libp2p} GitHub,
+	\textit{rust-libp2p -- Pull Request \#3312} (2023) \\
+	\url{https://github.com/libp2p/rust-libp2p/pull/3312}
+
+
+%%% section 2.2 links
+
+\bibitem{issue_compiling_fails} GitHub,
+	\textit{cargo-semver-checks -- Issue \#317} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/317}
+
+
+%%% section 2.3 links
+
+\bibitem{pyo3-issue} GitHub,
+    \textit{PyO3 -- Issue \#285} (2018) \\
+    \url{https://github.com/PyO3/pyo3/issues/285}
+
+\bibitem{clap-issue} GitHub,
+    \textit{clap -- Issue \#3876} (2022) \\
+    \url{https://github.com/clap-rs/clap/issues/3876}
+
+\bibitem{block-buffer-issue} GitHub,
+    \textit{RustCrypto -- Issue \#22} (2023) \\
+    \url{https://github.com/RustCrypto/utils/issues/22}
+
+\bibitem{paper} Hao Li, Filpe R Cogo, Cor-Paul Bezemer, \\
+    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (2022) \\
+	\url{https://arxiv.org/pdf/2201.11821.pdf}
+
+
+%%% section 2.4 links
+
+\bibitem{elm-lang} Evan Czaplicki,
+    \textit{Elm Programming Language} (2021) \\
+    \url{https://elm-lang.org/}
+
+
+%%% section 3.2 links
 
 \bibitem{issue_merge_cargo} GitHub,
 	\textit{cargo-semver-checks -- Issue \#61} (2023) \\
@@ -1056,13 +1153,26 @@ TODO:
 	\textit{cargo-semver-checks -- Issue \#86} (2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/86}
 
-\bibitem{issue_compiling_fails} GitHub,
-	\textit{cargo-semver-checks -- Issue \#317} (2023) \\
-	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/317}
 
-\bibitem{issue_libp2p} GitHub,
-	\textit{rust-libp2p -- Pull Request \#3312} (2023) \\
-	\url{https://github.com/libp2p/rust-libp2p/pull/3312}
+%%% section 4.1 links
+
+% \bibitem{rustdoc-theory} Rust Team,
+% 	\textit{The rustdoc book} (2023) \\
+% 	\url{https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html}
+
+% \bibitem{trustfall} GitHub,
+% 	\textit{Trustfall -- Query (Almost) Everything} (2023) \\
+% 	\url{https://github.com/obi1kenobi/trustfall}
+
+
+%%% section 4.2 links
+
+% \bibitem{cargo-semver-checks} GitHub,
+% 	\textit{cargo-semver-checks} (2023) \\
+% 	\url{https://github.com/obi1kenobi/cargo-semver-checks}
+
+
+%%% section 7.2 links
 
 \bibitem{responsibilities_tomasz} GitHub,
 	\textit{Contributions authored by Tomasz} (2023) \\
@@ -1083,78 +1193,6 @@ TODO:
 \bibitem{responsibilities_bartosz} GitHub,
 	\textit{Contributions authored by Bartosz} (2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3ASmolSir&s=updated&type=Issues}
-
-% \bibitem{Rust-1} Rust Team,
-% 	\textit{Rust Programming Language} (2023) \\
-% 	\url{https://www.rust-lang.org/}
-
-% \bibitem{Rust-2} Wikipedia,
-% 	\textit{Rust (programming language)} (2023) \\
-% 	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
-
-\bibitem{survey} Stack Overflow,
-	\textit{Annual Developer Survey} (2022) \\
-	\url{https://insights.stackoverflow.com/survey/}
-
-% \bibitem{Rust-for-Linux} Wikipedia,
-% 	\textit{Rust for Linux} (2023) \\
-% 	\url{https://en.wikipedia.org/wiki/Rust_for_Linux/}
-
-% \bibitem{Cargo} Rust Team,
-% 	\textit{The Cargo Book} (2023) \\
-% 	\url{https://doc.rust-lang.org/cargo/index.html/}
-
-% \bibitem{Cargo-vs-pip} William Manley,
-% 	\textit{Pip and Cargo are not the same} (2022) \\
-% 	\url{https://doc.rust-lang.org/cargo/index.html/}
-
-% \bibitem{Abstract-Syntax-Tree} Wikipedia,
-% 	\textit{Abstract syntax tree} (2023) \\
-% 	\url{https://en.wikipedia.org/wiki/Abstract_syntax_tree/}
-
-% \bibitem{Semantic-Versioning} semver.org,
-% 	\textit{Semantic Versioning 2.0.0} (2022) \\
-% 	\url{https://semver.org/}
-
-\bibitem{paper} Hao Li, Filpe R Cogo, Cor-Paul Bezemer, \\
-    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (2022) \\
-	\url{https://arxiv.org/pdf/2201.11821.pdf}
-
-% \bibitem{fearless-cargo-update} Predrag Gruevski,
-%     \textit{Towards fearless cargo update} (2022) \\
-%     \url{https://predr.ag/blog/toward-fearless-cargo-update/}
-
-\bibitem{elm-lang} Evan Czaplicki,
-    \textit{Elm Programming Language} (2021) \\
-    \url{https://elm-lang.org/}
-
-\bibitem{pyo3-issue} GitHub,
-    \textit{PyO3 -- Issue \#285} (2018) \\
-    \url{https://github.com/PyO3/pyo3/issues/285}
-
-\bibitem{clap-issue} GitHub,
-    \textit{clap -- Issue \#3876} (2022) \\
-    \url{https://github.com/clap-rs/clap/issues/3876}
-
-\bibitem{block-buffer-issue} GitHub,
-    \textit{RustCrypto -- Issue \#22} (2023) \\
-    \url{https://github.com/RustCrypto/utils/issues/22}
-
-% \bibitem{python-pip} Wikipedia,
-% 	\textit{Python pip} (2023) \\
-% 	\url{https://en.wikipedia.org/wiki/Pip_(package_manager)}
-
-% \bibitem{rustdoc-theory} Rust Team,
-% 	\textit{The rustdoc book} (2023) \\
-% 	\url{https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html}
-
-% \bibitem{trustfall} GitHub,
-% 	\textit{Trustfall -- Query (Almost) Everything} (2023) \\
-% 	\url{https://github.com/obi1kenobi/trustfall}
-
-% \bibitem{cargo-semver-checks} GitHub,
-% 	\textit{cargo-semver-checks} (2023) \\
-% 	\url{https://github.com/obi1kenobi/cargo-semver-checks}
 
 \end{thebibliography}
 
